[package]
name = "rnotes"
version = "0.1.0"
edition = "2021"
authors = [ "Carlo Caione <carlo.caione@gmail.com>" ]
description = "Simple note taking tool (in RUST)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
confy = "0.5.1"
directories = "5.0.1"
exitcode = "1.1.2"
glob = "0.3.1"
serde = "1.0.193"
serde_derive = "1.0.193"
